Git Tests/force-app/main/default/default/objects/ListaCentroDistribuicao__c/ListaCentroDistribuicao__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Lista com todos os centros de distribuição do Grupo Elfa.</description>
    <label>Centros de distribuição</label>
</CustomObject>