Git Tests/force-app/main/default/default/objects/ListaCentroDistribuicao__c/fields/NomeCD__c.field-meta.xml
<CustomField>
    <fullName>NomeCD__c</fullName>
    <label>Nome do CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>